<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoCaptionActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/camera_photo"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:textSize="16sp"
                android:hint="@string/write_a_caption"
                android:inputType="textMultiLine" />

            <Switch
                android:id="@+id/hashtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:splitTrack="true"
                android:switchPadding="120dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/enable_auto_hashtags"
                android:textAlignment="viewStart"
                android:textColor="@color/login_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                android:trackTint="@color/login_grey"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#45525E"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:backgroundTint="#45525E"
            android:text="@string/post" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>